--- a/metaFinal/src/view/PartieClient/modifierCompte.fxml
+++ b/metaFinal/src/view/PartieClient/modifierCompte.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -8,25 +9,16 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="left_main" prefHeight="683.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PartieClient.ModifierCompteController">
+<AnchorPane fx:id="left_main" prefHeight="725.0" prefWidth="1196.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PartieClient.ModifierCompteController">
    <children>
-      <AnchorPane layoutX="10.0" layoutY="8.0" prefHeight="675.0" prefWidth="522.0" style="-fx-background-color: #073258;">
-         <children>
-            <Label layoutX="80.0" layoutY="435.0" prefHeight="50.0" prefWidth="395.0" text="Welcome to MetaTrip " textFill="#fcfcfc">
-               <font>
-                  <Font size="34.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="307.0" fitWidth="330.0" layoutX="96.0" layoutY="107.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@272896551_284823900301309_6294383665325954873_n.png" />
-               </image></ImageView>
-         </children>
-      </AnchorPane>
-      <Button fx:id="submitButton" contentDisplay="CENTER" defaultButton="true" layoutX="768.0" layoutY="553.0" mnemonicParsing="false" onAction="#Valider" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #073258;" text="Valider" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="submitButton" contentDisplay="CENTER" defaultButton="true" layoutX="768.0" layoutY="553.0" mnemonicParsing="false" onAction="#Valider" prefHeight="31.0" prefWidth="192.0" style="-fx-background-color: #A9A8A8; -fx-background-radius: 50;" text="Valider" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Akhbar MT" size="18.0" />
          </font>
@@ -43,5 +35,73 @@
       <Label layoutX="557.0" layoutY="421.0" prefHeight="21.0" prefWidth="50.0" text="Image:" textFill="#0e0079" />
  <ImageView fx:id="image_view" fitHeight="92.0" fitWidth="170.0" layoutX="621.0" layoutY="413.0" pickOnBounds="true" preserveRatio="true" />
             <Button fx:id="insert_image" layoutX="635.0" layoutY="508.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="31.0" prefWidth="143.0" styleClass="insert-image-button" text="Insert Image" />
+      <VBox layoutX="-1.0" prefHeight="725.0" prefWidth="315.0" styleClass="right-bar" stylesheets="@../../values/style.css">
+         <children>
+            <HBox fx:id="chosenhotelCard" alignment="CENTER" prefHeight="110.0" prefWidth="200.0" styleClass="shadow" stylesheets="@../../values/style.css">
+               <children>
+                  <Label text="MetaTrip  " textFill="#8d8686">
+                     <font>
+                        <Font name="Cambria Bold" size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="21.0" prefWidth="255.0" styleClass="search-box" stylesheets="@../../values/style.css">
+               <VBox.margin>
+                  <Insets left="30.0" right="30.0" />
+               </VBox.margin>
+            </HBox>
+            <BorderPane prefHeight="53.0" prefWidth="385.0" />
+            <VBox alignment="CENTER_LEFT" prefHeight="528.0" prefWidth="212.0" styleClass="chosen-fruit-card" stylesheets="@../../values/style.css">
+               <VBox.margin>
+                  <Insets left="50.0" right="50.0" />
+               </VBox.margin>
+               <children>
+                  <ImageView fitHeight="117.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/logo_meta.png" />
+                     </image>
+                     <VBox.margin>
+                        <Insets left="60.0" />
+                     </VBox.margin>
+                  </ImageView>
+                  <VBox prefHeight="88.0" prefWidth="210.0">
+                     <children>
+                        <HBox fx:id="hosenhotelCard" prefHeight="36.0" prefWidth="235.0">
+                           <children>
+                              <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Une Fois MetaTrip ">
+                                 <font>
+                                    <Font name="System Italic" size="18.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Toujours MetaTrip!">
+                           <font>
+                              <Font name="System Italic" size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin>
+                        </Text>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <Label layoutX="629.0" layoutY="22.0" prefHeight="66.0" prefWidth="351.0" text="Modification compte" textFill="#8d8686">
+         <font>
+            <Font name="Cambria Bold" size="36.0" />
+         </font>
+      </Label>
+      <Button fx:id="retour_btn" layoutX="374.0" layoutY="621.0" mnemonicParsing="false" onAction="#Retour" prefHeight="48.0" prefWidth="135.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
