--- a/metaFinal/src/view/hotel/ChambreList.fxml
+++ b/metaFinal/src/view/hotel/ChambreList.fxml
@@ -18,30 +18,30 @@
       <TextField fx:id="numc" layoutX="146.0" layoutY="216.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
       <Label layoutX="23.0" layoutY="227.0" styleClass="labelform" text="Numero chambre">
          <font>
-            <Font name="Cambria" size="15.0" />
+            <Font name="Calibri" size="15.0" />
          </font></Label>
       <Label layoutX="29.0" layoutY="288.0" prefHeight="20.0" prefWidth="78.0" styleClass="labelform" text="Type">
          <font>
             <Font name="Cambria" size="15.0" />
          </font></Label>
-      <Button fx:id="btn_save" layoutX="486.0" layoutY="705.0" mnemonicParsing="false" onAction="#AjouterChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save" textFill="WHITE">
+      <Button fx:id="btn_save" layoutX="486.0" layoutY="705.0" mnemonicParsing="false" onAction="#AjouterChambre" prefHeight="41.0" prefWidth="85.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Save" textFill="WHITE">
          <font>
-            <Font name="Times New Roman Bold" size="12.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btn_delete" layoutX="752.0" layoutY="704.0" mnemonicParsing="false" onAction="#DeleteChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete" textFill="WHITE">
+      <Button fx:id="btn_delete" layoutX="745.0" layoutY="704.0" mnemonicParsing="false" onAction="#DeleteChambre" prefHeight="41.0" prefWidth="85.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Delete" textFill="WHITE">
          <font>
-            <Font name="Times New Roman Bold" size="12.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btn_edit" layoutX="628.0" layoutY="705.0" mnemonicParsing="false" onAction="#EditChambre" prefHeight="41.0" prefWidth="78.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit" textFill="WHITE">
+      <Button fx:id="btn_edit" layoutX="621.0" layoutY="705.0" mnemonicParsing="false" onAction="#EditChambre" prefHeight="41.0" prefWidth="85.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Edit" textFill="WHITE">
          <font>
-            <Font name="Times New Roman Bold" size="12.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <ImageView fx:id="image_view" fitHeight="142.0" fitWidth="199.0" layoutX="120.0" layoutY="590.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="image_view" fitHeight="142.0" fitWidth="199.0" layoutX="147.0" layoutY="596.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="24.0" layoutY="590.0" mnemonicParsing="false" onAction="#insertImage" styleClass="search-button" stylesheets="@../../values/style.css" text="Browse" textFill="WHITE" />
-      <Label fx:id="file_path" alignment="CENTER" layoutX="10.0" layoutY="553.0" prefHeight="23.0" prefWidth="199.0" />
+      <Label fx:id="file_path" alignment="CENTER" layoutX="9.0" layoutY="561.0" prefHeight="23.0" prefWidth="199.0" />
         
       <TableView fx:id="tab_chambre" layoutX="412.0" layoutY="181.0" onMouseClicked="#tablehandleButtonAction" prefHeight="499.0" prefWidth="620.0">
         <columns>
@@ -63,7 +63,7 @@
       
       <Label layoutX="9.0" layoutY="545.0" styleClass="labelform" text="Choissisez une image ">
          <font>
-            <Font size="12.0" />
+            <Font name="Cambria" size="12.0" />
          </font></Label>
       <ComboBox fx:id="nomhotel" layoutX="147.0" layoutY="410.0" prefHeight="41.0" prefWidth="199.0" promptText="Hotel" styleClass="search-box" stylesheets="@../../values/style.css" />
       <Label layoutX="29.0" layoutY="421.0" text="Hotel">
@@ -75,18 +75,18 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <TextField fx:id="tfrecherche" layoutX="51.0" layoutY="154.0" prefHeight="41.0" prefWidth="337.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
+      <TextField fx:id="tfrecherche" layoutX="78.0" layoutY="146.0" prefHeight="41.0" prefWidth="337.0" promptText="Recherche" styleClass="search-box" stylesheets="@../../values/style.css" />
       <TextField fx:id="prixc" layoutX="147.0" layoutY="472.0" prefHeight="41.0" prefWidth="199.0" styleClass="search-box" stylesheets="@../../values/style.css" />
       <Text layoutX="23.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix Chambre ">
          <font>
-            <Font name="Cambria" size="15.0" />
+            <Font name="Calibri" size="15.0" />
          </font>
       </Text>
       <VBox alignment="CENTER" layoutX="24.0" layoutY="14.0" prefHeight="85.0" prefWidth="1002.0" styleClass="chosen-fruit-card" stylesheets="@../../values/style.css">
          <children>
             <ImageView fitHeight="80.0" fitWidth="187.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/logo_meta.png" />
+                  <Image url="@../../image/logo_meta_1.png" />
                </image>
             </ImageView>
             <Label alignment="CENTER" text="MetaTrip  Chambre" textFill="#fcf3f3">
