--- a/metaFinal/src/view/hotel/InterfaceGestion.fxml
+++ b/metaFinal/src/view/hotel/InterfaceGestion.fxml
@@ -23,7 +23,7 @@
          <children>
             <ImageView fitHeight="101.0" fitWidth="243.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/logo_meta.png" />
+                  <Image url="@../../image/logo_meta_1.png" />
                </image>
                <VBox.margin>
                   <Insets left="60.0" />
