--- a/metaFinal/src/view/hotel/InterfaceReservationFXML.fxml
+++ b/metaFinal/src/view/hotel/InterfaceReservationFXML.fxml
@@ -56,7 +56,7 @@
                      <children>
                         <ImageView fitHeight="117.0" fitWidth="110.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../img/logo_meta.png" />
+                              <Image url="@../../image/logo_meta_1.png" />
                            </image>
                            <VBox.margin>
                               <Insets left="60.0" />
@@ -94,12 +94,12 @@
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER" prefHeight="65.0" prefWidth="200.0">
+                  <HBox alignment="CENTER" prefHeight="98.0" prefWidth="960.0">
                      <VBox.margin>
                         <Insets left="20.0" right="20.0" />
                      </VBox.margin>
                      <children>
-                        <Pane prefHeight="65.0" prefWidth="664.0" />
+                        <Pane prefHeight="86.0" prefWidth="664.0" />
                      </children>
                   </HBox>
                   <HBox prefHeight="638.0" prefWidth="950.0">
