--- a/metaFinal/src/view/hotel/ReservationHotel.fxml
+++ b/metaFinal/src/view/hotel/ReservationHotel.fxml
@@ -35,7 +35,7 @@
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Button>
-      <Button layoutX="183.0" layoutY="646.0" mnemonicParsing="false" onAction="#Retour" prefHeight="35.0" prefWidth="143.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE">
+      <Button layoutX="313.0" layoutY="649.0" mnemonicParsing="false" onAction="#Retour" prefHeight="35.0" prefWidth="143.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Retour" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Button>
@@ -47,7 +47,7 @@
          <children>
             <ImageView fitHeight="80.0" fitWidth="187.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../img/logo_meta.png" />
+                  <Image url="@../../image/logo_meta_1.png" />
                </image>
             </ImageView>
             <Label alignment="CENTER" text="MetaTrip  Reservation" textFill="#fcf3f3">
