--- a/metaFinal/src/view/hotel/item.fxml
+++ b/metaFinal/src/view/hotel/item.fxml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="314.0" prefWidth="391.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ItemController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="451.0" stylesheets="@../../values/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.hotel.ItemController">
    <children>
-      <ImageView fx:id="image" fitHeight="179.0" fitWidth="200.0" layoutX="96.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
-      <HBox layoutX="14.0" layoutY="217.0" prefHeight="48.0" prefWidth="374.0">
-         <children>
-            <Label fx:id="nomhotel" text="Hotel">
-               <font>
-                  <Font name="Cambria Bold" size="24.0" />
-               </font>
-            </Label>
-            <HBox prefHeight="45.0" prefWidth="169.0" />
-            <Label fx:id="nb_etoile" text="Hotel">
-               <font>
-                  <Font name="Cambria" size="20.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <Label fx:id="adressehotel1" layoutX="249.0" layoutY="276.0" text="Adresse">
+      <ImageView fx:id="image" fitHeight="201.0" fitWidth="335.0" layoutX="59.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="129.0" layoutY="387.0" mnemonicParsing="false" onAction="#Reserver" prefHeight="48.0" prefWidth="194.0" styleClass="search-button" stylesheets="@../../values/style.css" text="Reserver" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
+      <Label layoutX="90.0" layoutY="283.0" text="Adresse ">
+         <font>
+            <Font name="Cambria Bold" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="adresse" layoutX="214.0" layoutY="284.0" text="Adresse">
+         <font>
+            <Font name="Cambria" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="90.0" layoutY="340.0" text="Nombre etoile ">
+         <font>
+            <Font name="Cambria Bold" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="nb_etoile" layoutX="248.0" layoutY="341.0" text="nbetoile">
+         <font>
+            <Font name="Cambria" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="90.0" layoutY="229.0" text="Nom hotel">
+         <font>
+            <Font name="Cambria Bold" size="21.0" />
+         </font>
+      </Label>
+      <Label fx:id="nomhotel" layoutX="228.0" layoutY="230.0" text="Nom">
          <font>
             <Font name="Cambria" size="20.0" />
          </font>
