--- a/metaFinal/src/view/PartieClient/voyageORGClientPartie.fxml
+++ b/metaFinal/src/view/PartieClient/voyageORGClientPartie.fxml
@@ -32,6 +32,11 @@
                               <Font name="Cambria" size="40.0" />
                            </font>
                         </Label>
+                           <Label fx:id="username" prefHeight="62.0" prefWidth="100.0" textFill="#878787">
+                           <font>
+                              <Font name="Cambria" size="18.0" />
+                           </font>
+                        </Label>
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="65.0" prefWidth="200.0" style="-fx-background-color: A9A8A8;" stylesheets="@../values/style.css" VBox.vgrow="NEVER">
@@ -80,6 +85,7 @@
                                     <Font name="Cambria" size="36.0" />
                                  </font>
                               </Label>
+                              
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="53.0" prefWidth="335.0">
@@ -92,7 +98,7 @@
                   </VBox>
                   <Pane prefHeight="57.0" prefWidth="435.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <Button fx:id="map1" layoutX="166.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#map" prefHeight="40.0" prefWidth="130.0" style="-fx-background-color: # #010D79;" styleClass="search-button" stylesheets="@../values/style.css" text="Déconnexion" textFill="WHITE" />
+                        <Button fx:id="map1" layoutX="166.0" layoutY="18.0" mnemonicParsing="false" onMouseClicked="#logout" prefHeight="40.0" prefWidth="130.0" style="-fx-background-color: # #010D79;" styleClass="search-button" stylesheets="@../values/style.css" text="Déconnexion" textFill="WHITE" />
                      </children>
                   </Pane>
                </children>
