--- a/metaFinal/src/view/adminPanel/SponsorList.fxml
+++ b/metaFinal/src/view/adminPanel/SponsorList.fxml
@@ -13,34 +13,35 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="544.0" prefWidth="963.0" styleClass="background" stylesheets="@../../../../css/BACK.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.SponsorListController">
+<VBox prefHeight="477.0" prefWidth="1162.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.SponsorListController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="501.0" prefWidth="939.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="388.0" prefWidth="1162.0" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-            <Button fx:id="bsave" layoutX="444.0" layoutY="434.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Save">
+            <Button fx:id="bsave" layoutX="617.0" layoutY="389.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="35.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Save">
             
                        <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
-            <Button fx:id="bupdate" layoutX="569.0" layoutY="464.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" text="Edit">
+            <Button fx:id="bupdate" layoutX="746.0" layoutY="437.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Edit">
             
                      <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
-            <Button fx:id="bdelete" layoutX="569.0" layoutY="433.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="746.0" layoutY="390.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Delete">
             
                                  <font>
-                <Font name="Times New Roman" size="12.0" />
+                <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
             
-           <TableView fx:id="table" layoutX="317.0" layoutY="44.0" onMouseClicked="#tablehandleButtonAction" onMouseReleased="#ValidateEmail" prefHeight="335.0" prefWidth="575.0">
+           <TableView fx:id="table" layoutX="587.0" layoutY="41.0" onMouseClicked="#tablehandleButtonAction" onMouseReleased="#ValidateEmail" prefHeight="335.0" prefWidth="575.0">
             <columns>
                 <TableColumn fx:id="sids" prefWidth="33.0" text="ID" />
                 <TableColumn fx:id="snomsponsor" prefWidth="82.33331298828125" text="Nom" />
@@ -51,17 +52,8 @@
                         <TableColumn fx:id="simage" prefWidth="106.0" text="Image" />
             </columns>
         </TableView>
-        <Pane layoutX="104.0" layoutY="14.0" prefHeight="39.0" prefWidth="634.0">
-            <children>
-                <Label layoutX="307.0" layoutY="-11.0" prefHeight="10.0" prefWidth="337.0" text="Gestion des sponsors " textFill="#ffc300">
-                    <font>
-                        <Font name="Arial Bold" size="25.0" />
-                    </font>
-                
-                </Label>
-            </children>
-        </Pane>
-        <VBox layoutX="11.0" layoutY="82.0" prefHeight="415.0" prefWidth="298.0" spacing="15.0">
+        <Pane layoutX="300.0" layoutY="10.0" prefHeight="39.0" prefWidth="634.0" />
+        <VBox layoutX="262.0" layoutY="60.0" prefHeight="415.0" prefWidth="298.0" spacing="15.0">
             <children>
                             <TextField fx:id="ids" editable="false" prefHeight="35.0" prefWidth="276.0" promptText="ID Automatique" visible="false" />
                             <TextField fx:id="nomsponsor" alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="25.0" prefWidth="182.0" promptText="Insérer le nom de sponsor" />
@@ -71,29 +63,56 @@
                         <Label fx:id="maillabel" prefHeight="1.0" prefWidth="298.0" />
                         <DatePicker fx:id="date_sp" prefHeight="35.0" prefWidth="305.0" promptText="Date " />
                             <TextField fx:id="prix_sp" alignment="CENTER" prefHeight="22.0" prefWidth="298.0" promptText="Prix" styleClass="field" />
+                        <Button fx:id="insert_image" minWidth="48.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="35.0" prefWidth="48.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="...">
+                           <font>
+                              <Font name="Times New Roman Bold" size="12.0" />
+                           </font>
+                        </Button>
+                        <ImageView fx:id="image_view" fitHeight="121.0" fitWidth="171.0" pickOnBounds="true" preserveRatio="true" />
             </children>
         </VBox>
-                  <ImageView fx:id="image_view" fitHeight="86.0" fitWidth="101.0" layoutX="328.0" layoutY="406.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="file_path" alignment="CENTER" layoutX="856.0" layoutY="469.0" prefHeight="23.0" prefWidth="71.0" />
+                  <Label fx:id="file_path" alignment="CENTER" layoutX="1052.0" layoutY="465.0" prefHeight="23.0" prefWidth="71.0" />
             
-                          <Button layoutX="444.0" layoutY="467.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="btn" text="Reset">
+                          <Button layoutX="623.0" layoutY="434.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             
                     </Button>
-                  <Label layoutX="667.0" layoutY="396.0" text="Search Section">
+                  <Label layoutX="876.0" layoutY="397.0" text="Search Section">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="filterField" alignment="CENTER" layoutX="667.0" layoutY="420.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" />
-                  <ImageView fitHeight="86.0" fitWidth="112.0" layoutY="10.0">
-                     <image>
-                        <Image url="@../../logo.png" />
-                     </image>
-                  </ImageView>
-                  <ComboBox fx:id="ide" layoutX="89.0" layoutY="64.0" onAction="#combobox2" prefHeight="26.0" prefWidth="206.0" promptText="Choose Event" />
+                  <TextField fx:id="filterField" alignment="CENTER" layoutX="888.0" layoutY="433.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" stylesheets="@../../../../css/style.css" />
+                  <ComboBox fx:id="ide" layoutX="285.0" layoutY="60.0" onAction="#combobox2" prefHeight="26.0" prefWidth="206.0" promptText="Choose Event" styleClass="search-button" stylesheets="@../../../../css/style.css" />
+                  <VBox layoutX="14.0" layoutY="30.0" prefHeight="483.0" prefWidth="210.0">
+                     <children>
+                        <VBox prefHeight="470.0" prefWidth="210.0">
+                           <children>
+                              <VBox prefHeight="476.0" prefWidth="210.0" styleClass="chosen-fruit-card" stylesheets="@../../../../css/style.css">
+                                 <children>
+                                    <ImageView fitHeight="191.0" fitWidth="333.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../logo.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Une Fois MetaTrip " textAlignment="CENTER" wrappingWidth="154.65234375">
+                                       <font>
+                                          <Font name="System Italic" size="18.0" />
+                                       </font>
+                                    </Text>
+                                    <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Toujours MetaTrip!" textAlignment="CENTER" wrappingWidth="209.6630859375">
+                                       <font>
+                                          <Font name="System Italic" size="18.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </VBox>
         
      
     </children>
@@ -101,10 +120,5 @@
             
         </children>
       </VBox>
-      <Button fx:id="insert_image" minWidth="53.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="35.0" prefWidth="53.0" styleClass="btn" text="...">
-         <font>
-            <Font name="Times New Roman Bold" size="12.0" />
-         </font>
-      </Button>
   </children>
 </VBox>
