--- a/metaFinal/src/view/adminPanel/EventList.fxml
+++ b/metaFinal/src/view/adminPanel/EventList.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -12,42 +13,43 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="458.0" prefWidth="925.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.EventListController">
+<VBox prefHeight="467.0" prefWidth="1165.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.EventListController">
   <children>
-      <VBox prefHeight="400.0" prefWidth="640.0">
+      <VBox prefHeight="419.0" prefWidth="925.0">
         <children>
        
-<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="461.0" prefWidth="933.0" styleClass="background" stylesheets="@../../../../css/BACK.css" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="486.0" prefWidth="1160.0" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-        <VBox layoutX="6.0" layoutY="72.0" prefHeight="311.0" prefWidth="61.0" spacing="25.0" />
-        <Button fx:id="bsave" layoutX="392.0" layoutY="383.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Save">
+        <VBox layoutX="260.0" layoutY="66.0" prefHeight="311.0" prefWidth="61.0" spacing="25.0" />
+        <Button fx:id="bsave" layoutX="646.0" layoutY="365.0" mnemonicParsing="false" onAction="#saveEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Save">
            
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-        <Button fx:id="bupdate" layoutX="392.0" layoutY="420.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Edit">
+        <Button fx:id="bupdate" layoutX="646.0" layoutY="414.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Edit">
          
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
         </Button>
-            <Button fx:id="bdelete" layoutX="496.0" layoutY="420.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Delete">
+            <Button fx:id="bdelete" layoutX="750.0" layoutY="414.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Delete">
             
                                  <font>
-                <Font name="Times New Roman" size="12.0" />
+                <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
             
-              <Button layoutX="496.0" layoutY="383.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" styleClass="btn" text="Reset">
+              <Button layoutX="750.0" layoutY="365.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Reset">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             
         </Button>
             
-           <TableView fx:id="table" layoutX="316.0" layoutY="66.0" onMouseClicked="#tablehandleButtonAction" prefHeight="265.0" prefWidth="574.0">
+           <TableView fx:id="table" layoutX="570.0" layoutY="60.0" onMouseClicked="#tablehandleButtonAction" prefHeight="265.0" prefWidth="574.0">
             <columns>
                 <TableColumn fx:id="eIde" prefWidth="33.0" text="ID" />
                 <TableColumn fx:id="eType_event" prefWidth="82.33331298828125" text="Event Type" />
@@ -58,48 +60,69 @@
                         <TableColumn fx:id="eimage" prefWidth="106.0" text="Image" />
             </columns>
         </TableView>
-        <Pane layoutX="96.0" layoutY="12.0" prefHeight="39.0" prefWidth="634.0">
+        <Pane layoutX="350.0" layoutY="6.0" prefHeight="39.0" prefWidth="634.0">
             <children>
-                <Label layoutX="241.0" layoutY="7.0" prefHeight="10.0" prefWidth="337.0" text="Gestion des evenements " textFill="#ffc300">
-                    <font>
-                        <Font name="Arial Bold" size="25.0" />
-                    </font>
-                
-                </Label>
-                        <Button layoutX="519.0" layoutY="3.0" mnemonicParsing="false" onAction="#chart_switch" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Most Reserved Event" />
+                        <Button layoutX="519.0" layoutY="3.0" mnemonicParsing="false" onAction="#chart_switch" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Most Reserved Event" />
+                        <Label alignment="CENTER" layoutX="-46.0" layoutY="-13.0" prefHeight="66.0" prefWidth="546.0" text="Gestion des evenements" textAlignment="CENTER" textFill="#8d8686">
+                           <font>
+                              <Font name="Cambria Bold" size="36.0" />
+                           </font>
+                        </Label>
             </children>
         </Pane>
-        <VBox layoutX="11.0" layoutY="61.0" prefHeight="311.0" prefWidth="297.0" spacing="15.0">
+        <VBox layoutX="265.0" layoutY="55.0" prefHeight="311.0" prefWidth="297.0" spacing="15.0">
             <children>
                             <TextField fx:id="Ide" editable="false" prefHeight="35.0" prefWidth="259.0" promptText="ID Automatique" visible="false" />
-                            <TextField fx:id="Type_event" alignment="CENTER" layoutX="10.0" layoutY="10.0" promptText="Type de l'evenement" />
-                            <TextField fx:id="Chanteur" alignment="CENTER" layoutX="10.0" layoutY="20.0" promptText="Le chanteur" />
-                            <TextField fx:id="Adresse" alignment="CENTER" promptText="Addresse" styleClass="field" />
-                        <DatePicker fx:id="Date_event" prefHeight="35.0" prefWidth="298.0" promptText="Date" />
-                        <TextField fx:id="prix_e" alignment="CENTER" promptText="Prix" />
+                            <TextField fx:id="Type_event" alignment="CENTER" layoutX="10.0" layoutY="10.0" promptText="Type de l'evenement" stylesheets="@../../../../css/style.css" />
+                            <TextField fx:id="Chanteur" alignment="CENTER" layoutX="10.0" layoutY="20.0" promptText="Le chanteur" stylesheets="@../../../../css/style.css" />
+                            <TextField fx:id="Adresse" alignment="CENTER" promptText="Addresse" styleClass="field" stylesheets="@../../../../css/style.css" />
+                        <DatePicker fx:id="Date_event" prefHeight="35.0" prefWidth="298.0" promptText="Date">
+                           <stylesheets>
+                              <URL value="@../../../../css/style.css" />
+                              <URL value="@../../../../css/style.css" />
+                           </stylesheets></DatePicker>
+                        <TextField fx:id="prix_e" alignment="CENTER" promptText="Prix" stylesheets="@../../../../css/style.css" />
             </children>
         </VBox>
-                  <Button fx:id="insert_image" layoutX="14.0" layoutY="416.0" minWidth="41.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="35.0" prefWidth="41.0" styleClass="btn" text="...">
+                  <Button fx:id="insert_image" layoutX="245.0" layoutY="364.0" minWidth="41.0" mnemonicParsing="false" onAction="#insertImage" prefHeight="35.0" prefWidth="41.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="...">
                      <font>
                         <Font name="Times New Roman Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Label fx:id="file_path" alignment="CENTER" layoutX="695.0" layoutY="436.0" prefHeight="23.0" prefWidth="108.0" />
-                  <Label fx:id="seee" layoutX="340.0" layoutY="360.0" prefHeight="17.0" prefWidth="534.0" />
-                  <ImageView fx:id="image_view" fitHeight="58.0" fitWidth="133.0" layoutX="134.0" layoutY="387.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="647.0" layoutY="372.0" text="Search Section">
+                  <Label fx:id="file_path" alignment="CENTER" layoutX="949.0" layoutY="430.0" prefHeight="23.0" prefWidth="108.0" />
+                  <Label fx:id="seee" layoutX="594.0" layoutY="354.0" prefHeight="17.0" prefWidth="534.0" />
+                  <ImageView fx:id="image_view" fitHeight="116.0" fitWidth="214.0" layoutX="346.0" layoutY="323.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label layoutX="901.0" layoutY="366.0" text="Search Section">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="filterField" alignment="CENTER" layoutX="647.0" layoutY="392.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" />
-                  <Button layoutX="785.0" layoutY="15.0" mnemonicParsing="false" onAction="#evenement_switch" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="Gestion Sponsor" />
-                  <Button layoutX="827.0" layoutY="331.0" mnemonicParsing="false" onAction="#savetopdf" prefHeight="39.0" prefWidth="77.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;;" text="To Excel" />
-                  <ImageView fitHeight="98.0" fitWidth="126.0" layoutY="-4.0">
-                     <image>
-                        <Image url="@../../logo.png" />
-                     </image>
-                  </ImageView>
+                  <TextField fx:id="filterField" alignment="CENTER" layoutX="901.0" layoutY="386.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" />
+                  <Button layoutX="1039.0" layoutY="9.0" mnemonicParsing="false" onAction="#evenement_switch" styleClass="search-button" text="Gestion Sponsor">
+                     <stylesheets>
+                        <URL value="@../../../../css/zargabuttons.css" />
+                        <URL value="@../../../../css/style.css" />
+                     </stylesheets></Button>
+                  <Button layoutX="1076.0" layoutY="335.0" mnemonicParsing="false" onAction="#savetopdf" prefHeight="39.0" prefWidth="77.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="To Excel" />
+                  <VBox layoutX="14.0" layoutY="34.0" prefHeight="413.0" prefWidth="188.0" styleClass="chosen-fruit-card" stylesheets="@../../../../css/style.css">
+                     <children>
+                        <ImageView fitHeight="191.0" fitWidth="333.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../logo.png" />
+                           </image>
+                        </ImageView>
+                        <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Une Fois MetaTrip " textAlignment="CENTER" wrappingWidth="154.65234375">
+                           <font>
+                              <Font name="System Italic" size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Toujours MetaTrip!" textAlignment="CENTER" wrappingWidth="209.6630859375">
+                           <font>
+                              <Font name="System Italic" size="18.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
         
      
     </children>
