--- a/metaFinal/src/view/adminPanel/ReserveEvent.fxml
+++ b/metaFinal/src/view/adminPanel/ReserveEvent.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -7,24 +8,75 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../../css/BACK.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.ReserveEventController">
+<AnchorPane id="AnchorPane" prefHeight="495.0" prefWidth="903.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.ReserveEventController">
     <children>
-      <Button fx:id="reserverbutt" layoutX="47.0" layoutY="320.0" mnemonicParsing="false" onAction="#Reserver" prefHeight="31.0" prefWidth="213.0" text="Reserve" />
-      <ComboBox fx:id="ide" layoutX="47.0" layoutY="151.0" onAction="#combobox2" prefHeight="26.0" prefWidth="206.0" promptText="Choose Event" />
-      <ComboBox fx:id="idu" layoutX="47.0" layoutY="206.0" onAction="#combobox3" prefHeight="26.0" prefWidth="206.0" promptText="Choose User" />
-      <ImageView fitHeight="93.0" fitWidth="118.0" layoutX="14.0" layoutY="14.0">
-         <image>
-            <Image url="@../../../../../../../../My%20Project/MetaTrip_Java-zarga/metaFinal/src/view/img/logo_meta.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="253.0" layoutY="22.0" prefHeight="39.0" prefWidth="304.0" text="Take Your seat " textAlignment="CENTER" textFill="#1e679a">
+      <Button fx:id="reserverbutt" layoutX="501.0" layoutY="375.0" mnemonicParsing="false" onAction="#Reserver" prefHeight="31.0" prefWidth="213.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Reserver" textFill="WHITE">
          <font>
-            <Font size="27.0" />
+            <Font size="23.0" />
+         </font></Button>
+      <ComboBox fx:id="ide" layoutX="367.0" layoutY="137.0" onAction="#combobox2" prefHeight="50.0" prefWidth="480.0" promptText="Choose Event" styleClass="search-box" stylesheets="@../../../../css/style.css" />
+      <TextField fx:id="Nb_pers" layoutX="372.0" layoutY="293.0" prefHeight="44.0" prefWidth="474.0" promptText="Places" styleClass="search-box" stylesheets="@../../../../css/style.css" />
+      <VBox layoutX="10.0" layoutY="10.0" prefHeight="474.0" prefWidth="310.0" styleClass="right-bar" stylesheets="@../../../../../../../../NAYROUZ/metaFinal/src/values/style.css">
+         <children>
+            <HBox fx:id="chosenhotelCard" alignment="CENTER" prefHeight="110.0" prefWidth="200.0" styleClass="shadow" stylesheets="@../../../../../../../../NAYROUZ/metaFinal/src/values/style.css">
+               <children>
+                  <Label text="MetaTrip  Events" textFill="#8d8686">
+                     <font>
+                        <Font name="Cambria Bold" size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <BorderPane prefHeight="53.0" prefWidth="385.0" />
+            <VBox alignment="CENTER_LEFT" prefHeight="440.0" prefWidth="210.0" styleClass="chosen-fruit-card" stylesheets="@../../values/style.css">
+               <VBox.margin>
+                  <Insets left="50.0" right="50.0" />
+               </VBox.margin>
+               <children>
+                  <ImageView fitHeight="191.0" fitWidth="333.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../logo.png" />
+                     </image>
+                  </ImageView>
+                  <VBox prefHeight="88.0" prefWidth="210.0">
+                     <children>
+                        <HBox fx:id="hosenhotelCard1" prefHeight="36.0" prefWidth="235.0">
+                           <children>
+                              <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Une Fois MetaTrip ">
+                                 <font>
+                                    <Font name="System Italic" size="18.0" />
+                                 </font>
+                                 <HBox.margin>
+                                    <Insets left="20.0" />
+                                 </HBox.margin>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Toujours MetaTrip!">
+                           <font>
+                              <Font name="System Italic" size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="20.0" />
+                           </VBox.margin>
+                        </Text>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <Label alignment="CENTER" layoutX="357.0" layoutY="21.0" prefHeight="66.0" prefWidth="546.0" text="Prenez Votre Place" textAlignment="CENTER" textFill="#8d8686">
+         <font>
+            <Font name="Cambria Bold" size="36.0" />
          </font>
       </Label>
-      <ImageView fitHeight="220.0" fitWidth="253.0" layoutX="325.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true" />
-      <TextField fx:id="Nb_pers" layoutX="47.0" layoutY="262.0" prefHeight="26.0" prefWidth="213.0" promptText="Places" />
+      <ComboBox fx:id="idu" layoutX="367.0" layoutY="213.0" onAction="#combobox3" prefHeight="50.0" prefWidth="480.0" promptText="Choose User" styleClass="search-box" stylesheets="@../../../../css/style.css" />
    </children>
 </AnchorPane>
