--- a/metaFinal/src/view/adminPanel/Gestion_reservation_events.fxml
+++ b/metaFinal/src/view/adminPanel/Gestion_reservation_events.fxml
@@ -11,28 +11,29 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="401.0" prefWidth="865.0" styleClass="background" stylesheets="@../../../../css/BACK.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.Gestion_reservation_eventsController">
+<VBox prefHeight="389.0" prefWidth="1108.0" styleClass="bac" stylesheets="@../../../../css/style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.Gestion_reservation_eventsController">
   <children>
       <VBox prefHeight="400.0" prefWidth="640.0">
         <children>
        
-<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="501.0" prefWidth="936.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171">
+<AnchorPane id="AnchorPane" fx:id="left_main" prefHeight="501.0" prefWidth="936.0" stylesheets="@../../../../css/style.css" xmlns="http://javafx.com/javafx/8.0.171">
     <children>
-            <Button fx:id="bupdate" layoutX="192.0" layoutY="210.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" text="Accept">
+            <Button fx:id="bupdate" layoutX="351.0" layoutY="211.0" mnemonicParsing="false" onAction="#updateEvent" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Accept">
             
                      <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
-            <Button fx:id="bdelete" layoutX="25.0" layoutY="210.0" mnemonicParsing="false" onAction="#delete" onMouseClicked="#tablehandleButtonAction" prefHeight="33.0" prefWidth="71.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="btn" text="Reject">
+            <Button fx:id="bdelete" layoutX="184.0" layoutY="211.0" mnemonicParsing="false" onAction="#delete" onMouseClicked="#tablehandleButtonAction" prefHeight="33.0" prefWidth="71.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Reject">
             
                                  <font>
-                <Font name="Times New Roman" size="12.0" />
+                <Font name="Times New Roman Bold" size="12.0" />
             </font>
             </Button>
             
-           <TableView fx:id="table" layoutX="294.0" layoutY="61.0" onMouseClicked="#tablehandleButtonAction" onMouseReleased="#ValidateEmail" prefHeight="326.0" prefWidth="557.0">
+           <TableView fx:id="table" layoutX="471.0" layoutY="64.0" onMouseClicked="#tablehandleButtonAction" onMouseReleased="#ValidateEmail" prefHeight="326.0" prefWidth="618.0">
             <columns>
                 <TableColumn fx:id="rIdrev" prefWidth="103.0" text="Idrev " />
                 <TableColumn fx:id="rNb_pers" prefWidth="116.0" text="Nb_pers" />
@@ -41,34 +42,47 @@
             </columns>
         </TableView>
         <Pane layoutX="104.0" layoutY="14.0" prefHeight="39.0" prefWidth="761.0">
-            <children>
-                <Label layoutX="219.0" layoutY="2.0" prefHeight="36.0" prefWidth="423.0" text="Gestion Reservations [EVENTS]" textFill="#ffc300">
-                    <font>
-                        <Font name="Arial Bold" size="25.0" />
-                    </font>
-                
-                </Label>
-            </children>
+                     <children>
+                        <Label alignment="CENTER" layoutX="217.0" layoutY="-8.0" prefHeight="66.0" prefWidth="833.0" text="Gestion reservations evenements" textAlignment="CENTER" textFill="#8d8686">
+                           <font>
+                              <Font name="Cambria Bold" size="36.0" />
+                           </font>
+                        </Label>
+                     </children>
         </Pane>
             
-                          <Button layoutX="104.0" layoutY="260.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="88.0" style="-fx-font: bold italic 10pt &quot;Arial&quot;; -fx-effect: ropshadow( one-pass-box , black , 8 , 0.0 , 2 , 0 );" styleClass="btn" text="Refresh">
+                          <Button layoutX="263.0" layoutY="261.0" mnemonicParsing="false" onAction="#clearEvent" prefHeight="33.0" prefWidth="88.0" styleClass="search-button" stylesheets="@../../../../css/style.css" text="Refresh">
             <font>
                 <Font name="Times New Roman Bold" size="12.0" />
             </font>
             
                     </Button>
-                  <Label layoutX="13.0" layoutY="325.0" text="Search Section">
+                  <Label layoutX="192.0" layoutY="328.0" text="Search Section">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="filterField" alignment="CENTER" layoutX="48.0" layoutY="354.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" />
-                  <ImageView fitHeight="191.0" fitWidth="242.0" layoutX="34.0">
-                     <image>
-                        <Image url="@../../logo.png" />
-                     </image>
-                  </ImageView>
+                  <TextField fx:id="filterField" alignment="CENTER" layoutX="207.0" layoutY="355.0" prefHeight="35.0" prefWidth="235.0" promptText="Type Here!" stylesheets="@../../../../css/style.css" />
                   <TextField fx:id="IdrevF" editable="false" layoutX="202.0" layoutY="293.0" prefHeight="35.0" prefWidth="187.0" visible="false" />
+                  <VBox layoutX="-3.0" layoutY="14.0" prefHeight="384.0" prefWidth="170.0" styleClass="chosen-fruit-card" stylesheets="@../../../../css/style.css">
+                     <children>
+                        <ImageView fitHeight="233.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../logo.png" />
+                           </image>
+                        </ImageView>
+                        <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="  Une Fois MetaTrip " textAlignment="CENTER">
+                           <font>
+                              <Font name="System Italic" size="18.0" />
+                           </font>
+                        </Text>
+                        <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="  Toujours MetaTrip!">
+                           <font>
+                              <Font name="System Italic" size="18.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
         
      
     </children>
