--- a/metaFinal/src/view/adminPanel/Chart.fxml
+++ b/metaFinal/src/view/adminPanel/Chart.fxml
@@ -5,19 +5,35 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="457.0" prefWidth="739.0" styleClass="background" stylesheets="@../../css/BACK.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.ChartController">
+<AnchorPane id="AnchorPane" prefHeight="398.0" prefWidth="739.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.adminPanel.ChartController">
    <children>
-      <PieChart fx:id="piechart" layoutX="99.0" layoutY="51.0" prefHeight="392.0" prefWidth="620.0" />
-      <ImageView fitHeight="86.0" fitWidth="111.0">
-         <image>
-            <Image url="@../../logo.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="216.0" layoutY="14.0" prefHeight="51.0" prefWidth="490.0" text="Chanteur le plus réservé " textFill="#00d8ff">
+      <PieChart fx:id="piechart" layoutX="201.0" layoutY="51.0" prefHeight="327.0" prefWidth="518.0" />
+      <VBox layoutX="30.0" layoutY="27.0" prefHeight="355.0" prefWidth="159.0" styleClass="chosen-fruit-card" stylesheets="@../../../../css/style.css">
+         <children>
+            <ImageView fitHeight="86.0" fitWidth="111.0">
+               <image>
+                  <Image url="@../../logo.png" />
+               </image>
+            </ImageView>
+            <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Une Fois MetaTrip " textAlignment="CENTER">
+               <font>
+                  <Font name="System Italic" size="18.0" />
+               </font>
+            </Text>
+            <Text fill="#e7e6fc" strokeType="OUTSIDE" strokeWidth="0.0" text="Toujours MetaTrip!">
+               <font>
+                  <Font name="System Italic" size="18.0" />
+               </font>
+            </Text>
+         </children>
+      </VBox>
+      <Label layoutX="272.0" layoutY="14.0" text="Chanteur le plus réservé" textFill="#8d8686">
          <font>
-            <Font name="Arial Bold" size="35.0" />
+            <Font name="Cambria Bold" size="36.0" />
          </font>
       </Label>
    </children>
